--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -53,5 +52,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/alisafari-it/complete-md-viewer.git"
-  }
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
